fix: animation exit example

--- a/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
@@ -118,24 +118,26 @@ styledObject = {
             const StyledMotionViewRef = React.useRef(styledAnimated(
               Motion.View,
               {
-                'w': 100,
-                'h': 50,
-                'bg': '$blue500',
-                'p': '$2',
+                 px: '$3.5',
+                py: '$2.5', 
+                'bg': '$blue600',
                 alignItems: 'center',
                 justifyContent: 'center',
+                rounded: '$md',
+                cursor: 'pointer',
                 ':animate': {
-                  scale: 0.8,
+                  scale: 1,
                 },
                 ':hover': {
                   ':animate': {
-                    scale: 1
+                    scale: 1.2
                   },
                 },
                 _text: {
-                  color: '$white'
+                  fontSize: '$md',
+                lineHeight: '$md',
+                color: '$white',
                 }
-                
               },
               {
                 descendantStyle: ['_text'],
@@ -143,7 +145,7 @@ styledObject = {
             ));
             const StyledMotionView = StyledMotionViewRef.current;
             const StyledText = styledAnimated(
-              Motion.View,
+              Text,
               {},
               {
                 ancestorStyle: ['_text'],
@@ -179,19 +181,25 @@ const styledAnimated = createStyled([new AnimationResolver({})]);
 const StyledMotionView = styledAnimated(
   Motion.View,
   {
-    'w': 100,
-    'h': 200,
-    'bg': '$blue500',
-    ':initial': { y: -150 },
+    'px': '$3.5',
+    'py': '$2.5',
+    'bg': '$blue600',
+    'alignItems': 'center',
+    'justifyContent': 'center',
+    'rounded': '$md',
+    'cursor': 'pointer',
     ':animate': {
-      opacity: 0.5,
-      y: 50,
       scale: 1,
     },
     ':hover': {
       ':animate': {
-        opacity: 1,
+        scale: 1.2,
       },
+    },
+    '_text': {
+      fontSize: '$md',
+      lineHeight: '$md',
+      color: '$white',
     },
   },
   {
@@ -230,42 +238,106 @@ In this example, we're using the `styled.Component` component provided by the An
         Text,
         View,
       },
-      code: `
-<styled.Component>{show && <StyledBox exit={{
-  scale: 0.5,
-  opacity: 0,
-}} />}</styled.Component>`,
+      code: ` <styled.Component>
+          <StyledMotionImage
+            style={{
+              width: '100%',
+              height: '100%',
+              position: 'absolute',
+            }}
+            source={{ uri: images[imageIndex] }}
+            key={imageIndex-Math.random()}
+            sx={{
+              ':initial': {
+                x: xPosition,
+                opacity: 0,
+              },
+              ':exit': {
+                zIndex: 0,
+                x: -xPosition,
+                opacity: 0,
+              },
+              ':transition': {
+                x: { type: 'spring', stiffness: 200, damping: 23 },
+              },
+            }}
+          />
+        </styled.Component>`,
       transformCode: (code) => `
           function App(){
-            const styled = createStyled([new AnimationResolver()]);
-            const StyledBox = styled(
-              Motion.View,
-              {
-                'w': '$20',
-                'h': '$20',
-                rounded: '$md',
-                'bg': '$blue500',
-                ':initial': {
-                  opacity: 0,
-                  scale: 0.5,
-                },
-                ':animate': {
-                  opacity: 1,
-                  scale: 1,
-                },
-                ':exit': {
-                  opacity: 0,
-                  scale: 0.5,
-                },
-              },
-            );
-            const [show, setShow] = React.useState(true);
+            const styledRef = React.useRef(createStyled([new AnimationResolver()]));
+            const styled = styledRef.current;
+const images = ['https://i.imgur.com/v6VFkPR.jpeg', 'https://i.imgur.com/5p1B7TT.jpeg', 'https://i.imgur.com/kvwOXOl.jpeg'];
+const BoxRef = React.useRef(styled(View, {}));
+const Box = BoxRef.current;
+const StyledMotionImageRef = React.useRef(styled(Motion.Image, {
+  ':animate': {
+    zIndex: 1,
+    x: 0,
+    opacity: 1,
+  },
+}));
+const StyledMotionImage = StyledMotionImageRef.current;
+ const [imageIndex, setImageIndex] = React.useState(0);
+  const [xPosition, setXPosition] = React.useState(0);
+  console.log('xPosition', xPosition, 'imageIndeow', imageIndex);
             return ( 
               <Provider config={config}>
-              <Pressable onPress={() => setShow(!show)} style={{backgroundColor: 'red', padding: 8, borderRadius: 4, marginBottom: 8}}>
-                <Text style={{color: 'white'}}>{show ? 'Unmount' : 'Mount'}</Text>
-              </Pressable>
-                ${code}
+              <Box
+        sx={{
+          'position': 'relative',
+          'justifyContent': 'center',
+          'width': '100%',
+          'height': 200,
+          '@sm': {
+            height: 400,
+          },
+          'aspectRatio': 1 * 1.4,
+        }}
+      >
+       ${code}
+      </Box>
+      <Pressable
+        accessibilityRole="button"
+        style={{
+          position: 'absolute',
+          backgroundColor: 'white',
+          borderRadius: 30,
+          width: 40,
+          height: 40,
+          justifyContent: 'center',
+          alignItems: 'center',
+          zIndex: 2,
+          right: 10,
+        }}
+        onPress={() => {
+          setXPosition(1000);
+          setImageIndex((prev) => (prev + 1) % images.length);
+        }}
+      >
+        {'‣'}
+      </Pressable>
+      <Pressable
+        accessibilityRole="button"
+        style={{
+          position: 'absolute',
+          backgroundColor: 'white',
+          borderRadius: 30,
+          width: 40,
+          height: 40,
+          justifyContent: 'center',
+          alignItems: 'center',
+          zIndex: 2,
+          left: 10,
+          transform: [{ scale: -1 }],
+        }}
+        onPress={() => {
+          setXPosition(-1000);
+          setImageIndex((prev) => (prev - 1 + images.length) % images.length);
+        }}
+      >
+        {'‣'}
+      </Pressable>
               </Provider>
             );
           }
@@ -278,3 +350,13 @@ In this example, we're using the `styled.Component` component provided by the An
 
 - We are converting user styled object to internal styled object through input middleware that is heavy task and will affect performance.
 - Typings are not yet supported for animation props
+
+<Motion.Image
+  source={{
+    uri: 'https://wallpaperaccess.com/full/317501.jpg',
+  }}
+  style={{
+    height: 300,
+    width: 300,
+  }}
+/>
