fix: prev and next button styling

--- a/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
+++ b/example/storybook/src/plugins/AnimationPlugin/index.stories.mdx
@@ -295,6 +295,7 @@ const StyledMotionImage = StyledMotionImageRef.current;
           height: 40,
           justifyContent: 'center',
           alignItems: 'center',
+          top: '50%',
           zIndex: 2,
           right: 10,
         }}
@@ -315,6 +316,7 @@ const StyledMotionImage = StyledMotionImageRef.current;
           height: 40,
           justifyContent: 'center',
           alignItems: 'center',
+          top: '50%',
           zIndex: 2,
           left: 10,
           transform: [{ scale: -1 }],
