fix: add latest in cli commands

--- a/example/storybook/src/components/Forms/Input/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Input/index.stories.mdx
@@ -61,7 +61,7 @@ Following is the default implementation of the **Input** component without any a
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
-npx gluestack-ui add input
+npx gluestack-ui@latest add input
 ```
 
 ### Import
