--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -22,7 +22,7 @@ import Wrapper from '../../Wrapper';
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```jsx
-npx gluestack-ui add provider
+npx gluestack-ui@latest add provider
 ```
 
 <br />
