--- a/example/storybook/src/getting-started/gluestack-ui-cli/index.stories.mdx
+++ b/example/storybook/src/getting-started/gluestack-ui-cli/index.stories.mdx
@@ -19,20 +19,20 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 ```bash
 
 # init gluestack-ui
-npx gluestack-ui init
+npx gluestack-ui@latest init
 
 # init and add components
-npx gluestack-ui
+npx gluestack-ui@latest
 
 # add component
-npx gluestack-ui add <component-name>
+npx gluestack-ui@latest add <component-name>
 
 # update component
-npx gluestack-ui update <component-name>
+npx gluestack-ui@latest update <component-name>
 
 # remove component
-npx gluestack-ui remove <component-name>
+npx gluestack-ui@latest remove <component-name>
 
 # help
-npx gluestack-ui help
+npx gluestack-ui@latest help
 ```
