--- a/example/storybook/src/components/Forms/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Pressable/index.stories.mdx
@@ -62,7 +62,7 @@ Following is the default implementation of the **Pressable** component without a
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
-npx gluestack-ui add pressable
+npx gluestack-ui@latest add pressable
 ```
 
 ### Import
