--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -63,7 +63,7 @@ Following is the default implementation of the **Box** component without any add
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
-npx gluestack-ui add box
+npx gluestack-ui@latest add box
 ```
 
 ### Import
