--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -33,7 +33,7 @@ import Wrapper from '../../Wrapper';
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```jsx
-npx gluestack-ui add fab
+npx gluestack-ui@latest add fab
 ```
 
 ### Import
