--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -92,7 +92,7 @@ Following is the default implementation of the **Menu** component without any ad
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```bash
-npx gluestack-ui add menu
+npx gluestack-ui@latest add menu
 ```
 
 ### Import
