--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -78,7 +78,7 @@ Following is the default implementation of the **Tooltip** component without any
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```jsx
-npx gluestack-ui add tooltip
+npx gluestack-ui@latest add tooltip
 ```
 
 ### Import
