--- a/example/storybook/src/getting-started/install-expo/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-expo/index.stories.mdx
@@ -25,7 +25,7 @@ To get started with `gluestack-ui`, you can install it using `npx` to do initial
 To do the initial setup run:
 
 ```bash
-npx gluestack-ui@latest init
+npx gluestack-ui@latest@latest init
 ```
 
 This will:
@@ -62,10 +62,10 @@ For components to work properly we need to wrap our components with `<GluestackU
 
 ### Step 3: Component Adder
 
-We can add a new component using npx `npx gluestack-ui add <package-name>`. For example, to add the button component package, you can run the following command:
+We can add a new component using npx `npx gluestack-ui@latest@latest add <package-name>`. For example, to add the button component package, you can run the following command:
 
 ```bash
-npx gluestack-ui add button
+npx gluestack-ui@latest@latest add button
 ```
 
 This will install the `@gluestack-ui/button` package and add it to your project's dependencies. This will add the necessary code to your project, including importing the `createButton` function and creating a `Button` component using it.
