fix: next adapter docs

--- a/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
@@ -73,7 +73,7 @@ Document.getInitialProps = async ({ renderPage }: any) => {
 export default Document;
 ```
 
-### Step 3: setup Next.js adapter
+### Step 3: Setup @gluestack/ui-next-adapter
 
 To use `gluestack-ui` components with server-side rendering, you need to configure your project to transpile the modules correctly. The easiest way to do this is by using the `withGluestackUI` Next.js adapter. This adapter adds the necessary configuration to your project to ensure that your gluestack-ui components are transpiled correctly for server-side rendering.
 
