--- a/example/storybook/src/getting-started/install-expo/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-expo/index.stories.mdx
@@ -62,7 +62,7 @@ For components to work properly we need to wrap our components with `<GluestackU
 
 ### Step 3: Component Adder
 
-We can add a new component using npx `npx gluestack-ui@latest@latest add <package-name>`. For example, to add the button component package, you can run the following command:
+We can add a new component using npx `npx gluestack-ui@latest add <package-name>`. For example, to add the button component package, you can run the following command:
 
 ```bash
 npx gluestack-ui@latest add button
