--- a/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
+++ b/example/storybook/src/getting-started/install-nextjs/index.stories.mdx
@@ -1,7 +1,7 @@
 ---
 title: Installation in Next.js project | gluestack-ui
 
-description: To get started with gluestack-ui, check out this quick installation guide. It provides simple steps to help you install and use the library in your projects..
+description: To get started with gluestack-ui, check out this quick installation guide. It provides simple steps to help you install and use the library in your projects.
 
 pageTitle: Installation
 
