--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -14,7 +14,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Forms/Select" />
 
-import { Select, Icon, InfoIcon } from './Select';
+import { Select, Icon, ChevronDownIcon } from './Select';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
@@ -37,17 +37,37 @@ Following is the default implementation of the **Select** component without any 
     showArgsController={false}
     metaData={{
       code: `
- <Select>
-  <Select.ItemList placeholder="Select">
-    <Select.Item value="select option" label="select option" />
-    <Select.Item value="select option 1" label="select option 1" />
-    <Select.Item value="select option 2" label="select option 2" />
-    <Select.Item value="select option 3" label="select option 3" />
-  </Select.ItemList>
-  <Select.Icon>
-      <Icon as={InfoIcon} />
-  </Select.Icon>
-</Select>
+<Select>
+          <Select.Trigger>
+            <Select.Input placeholder="Select option" />
+            <Select.Icon mr="$3">
+              <Icon as={ChevronDownIcon} />
+            </Select.Icon>
+          </Select.Trigger>
+          <Select.Portal>
+            <Select.Backdrop />
+            <Select.Content>
+              <Select.DragIndicatorWrapper>
+                <Select.DragIndicator />
+              </Select.DragIndicatorWrapper>
+              <Select.Item label="UX Research" value="UX Research" />
+              <Select.Item label="Web Development" value="Web Development" />
+              <Select.Item
+                label="Cross Platform Development Process"
+                value="Cross Platform Development Process"
+              />
+              <Select.Item
+                label="UI Designing"
+                value="UI Designing"
+                isDisabled={true}
+              />
+              <Select.Item
+                label="Backend Development"
+                value="Backend Development"
+              />
+            </Select.Content>
+          </Select.Portal>
+        </Select>
 `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -56,7 +76,7 @@ Following is the default implementation of the **Select** component without any 
         Wrapper,
         Select,
         Icon,
-        InfoIcon,
+        ChevronDownIcon,
       },
       argsType: {},
     }}
@@ -86,10 +106,21 @@ The structure provided below can help you identify and understand a Select compo
 ```jsx
 export default () => (
   <Select>
-    <Select.ItemList placeholder="Select">
-      <Select.Item value="select option" label="select option" />
-    </Select.ItemList>
-    <Select.Icon></Select.Icon>
+    <Select.Trigger>
+      <Select.Input />
+      <Select.Icon>
+        <Icon />
+      </Select.Icon>
+    </Select.Trigger>
+    <Select.Portal>
+      <Select.Backdrop />
+      <Select.Content>
+        <Select.DragIndicatorWrapper>
+          <Select.DragIndicator />
+        </Select.DragIndicatorWrapper>
+        <Select.Item label="UX Research" value="UX Research" />
+      </Select.Content>
+    </Select.Portal>
   </Select>
 );
 ```
@@ -102,6 +133,8 @@ The following section contains a comprehensive list of the component's reference
 
 Contains all Select related layout style and highlevel select props.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+> Note: Please note that this select component renders as an Actionsheet on `iOS` and `Android` devices for a native feel. On `web`, it behaves like a regular select element and renders the default HTML options.
 
 <AppProvider>
   <TableContainer>
@@ -130,13 +163,45 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>bool</Table.TText>
+            <Table.TText>boolean</Table.TText>
           </Table.TD>
           <Table.TD>
             <Table.TText>false</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`When true, its disabled state activates.`}</Table.TText>
+            <Table.TText>{`When true, the select is disabled and cannot be edited.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>isInvalid</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>boolean</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>false</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`When true, the select displays an error state.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>isRequired</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>boolean</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>false</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`When true, sets aria-required="true" on the input.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -146,13 +211,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>bool</Table.TText>
+            <Table.TText>boolean</Table.TText>
           </Table.TD>
           <Table.TD>
             <Table.TText>false</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`To manually set hover to the button.`}</Table.TText>
+            <Table.TText>{`When true, the select displays a hover state.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -162,13 +227,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>bool</Table.TText>
+            <Table.TText>boolean</Table.TText>
           </Table.TD>
           <Table.TD>
             <Table.TText>false</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`If true, the focus ring of select will be visible.`}</Table.TText>
+            <Table.TText>{`When true, the focus ring of select will be visible.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -178,13 +243,61 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>bool</Table.TText>
+            <Table.TText>boolean</Table.TText>
           </Table.TD>
           <Table.TD>
             <Table.TText>false</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`To manually set focused state to the button.`}</Table.TText>
+            <Table.TText>{`When true, the select displays a focus state.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>closeOnOverlayClick</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>boolean</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>false</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`When true, the select will close when the overlay is clicked.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>selectedValue</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>boolean</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>false</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`Sets the currently selected option value, allowing the component to render with the corresponding option pre-selected.`}</Table.TText>
+          </Table.TD>
+        </Table.TR>
+        <Table.TR>
+          <Table.TD>
+            <Table.TText>
+              <InlineCode>defaultValue</InlineCode>
+            </Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>boolean</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>false</Table.TText>
+          </Table.TD>
+          <Table.TD>
+            <Table.TText>{`Sets the initial selected option value for a select component.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -194,13 +307,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`(nativeEvent: any) => void`}</Table.TText>
+            <Table.TText>{`() => any`}</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>false</Table.TText>
+            <Table.TText>-</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`Callback to be invoked when Select Dropdown or BottomSheet is opened.`}</Table.TText>
+            <Table.TText>{`Callback to be invoked when Select Dropdown or Actionsheet is opened.`}</Table.TText>
           </Table.TD>
         </Table.TR>
         <Table.TR>
@@ -210,13 +323,13 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
             </Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`(nativeEvent: any) => void`}</Table.TText>
+            <Table.TText>{`() => any`}</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>false</Table.TText>
+            <Table.TText>-</Table.TText>
           </Table.TD>
           <Table.TD>
-            <Table.TText>{`Callback to be invoked when Select Dropdown or BottomSheet is closed.`}</Table.TText>
+            <Table.TText>{`Callback to be invoked when Select Dropdown or Actionsheet is closed.`}</Table.TText>
           </Table.TD>
         </Table.TR>
       </Table.TBody>
@@ -224,13 +337,41 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   </TableContainer>
 </AppProvider>
 
-#### Select.ItemList
+#### Select.Trigger
+
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+#### Select.Input
 
 It inherits all the properties of React Native's [TextInput](https://reactnative.dev/docs/textInput#props) component.
 
+#### Select.Icon
+
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+#### Select.Portal
+
+It is internally mapped wth gluestack-ui's [Actionsheet](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+#### Select.Backdrop
+
+It is internally mapped wth gluestack-ui's [Actionsheet.Backdrop](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which is React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component, created using [@legendapp/motion's](https://legendapp.com/open-source/motion/) `createMotionAnimatedComponent` function to add animation to the component. You can use any declarative animation library you prefer.
+
+#### Select.Content
+
+It is internally mapped wth gluestack-ui's [Actionsheet.Content](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of [@legendapp/motion's](https://legendapp.com/open-source/motion/) [Motion.View](https://legendapp.com/open-source/motion/overview/) component. With this ActionSheet component, you have the flexibility to use any declarative animation library that suits your needs.
+
+#### Select.DragIndicatorWrapper
+
+It is internally mapped wth gluestack-ui's [Actionsheet.DragIndicatorWrapper](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+#### Select.DragIndicator
+
+It is internally mapped wth gluestack-ui's [Actionsheet.DragIndicator](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
 #### Select.Item
 
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+It internally uses gluestack-ui's [Actionsheet.Item](https://ui.gluestack.io/docs/components/disclosure/actionsheet) and [Actionsheet.ItemText](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
 
 <AppProvider>
   <TableContainer>
@@ -305,10 +446,25 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   </TableContainer>
 </AppProvider>
 
-#### Select.Icon
+#### Select.ScrollView
 
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
-You can pass any icon inside that.
+It is internally mapped wth gluestack-ui's [Actionsheet.ScrollView](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [ScrollView](https://reactnative.dev/docs/scrollview#props) component.
+
+#### Select.VirtualizedList
+
+It is internally mapped wth gluestack-ui's [Actionsheet.VirtualizedList](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [VirtualizedList](https://reactnative.dev/docs/virtualizedlist#props) component.
+
+#### Select.FlatList
+
+It is internally mapped wth gluestack-ui's [Actionsheet.FlatList](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [FlatList](https://reactnative.dev/docs/flatlist#props) component.
+
+#### Select.SectionList
+
+It is internally mapped wth gluestack-ui's [Actionsheet.SectionList](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [SectionList](https://reactnative.dev/docs/sectionlist#props) component.
+
+#### Select.SectionHeaderText
+
+It is internally mapped wth gluestack-ui's [Actionsheet.SectionHeaderText](https://ui.gluestack.io/docs/components/disclosure/actionsheet) component, which inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
 ### Features
 
