--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -15,6 +15,7 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="components/Forms/Select" />
 
 import { Select, Icon, ChevronDownIcon } from './Select';
+import { FormControl, WarningIcon } from './SelectFormControl';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
@@ -592,3 +593,72 @@ export default () => (
   </Select>
 );
 ```
+
+### Select FormControlled
+
+The Select component with FormControl example demonstrates how to manage its state using the FormControl component. This allows for easy integration with forms and form validation.
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+        <FormControl isRequired>
+          <FormControl.Label>
+            <FormControl.Label.Text>
+              Choose your favorite color
+            </FormControl.Label.Text>
+          </FormControl.Label>
+          <Select>
+            <Select.Trigger>
+              <Select.Input placeholder="Select option" />
+              <Select.Icon mr="$3">
+                <Icon as={ChevronDownIcon} />
+              </Select.Icon>
+            </Select.Trigger>
+            <Select.Portal>
+              <Select.Backdrop />
+              <Select.Content>
+                <Select.DragIndicatorWrapper>
+                  <Select.DragIndicator />
+                </Select.DragIndicatorWrapper>
+                <Select.Item label="Red" value="Red" />
+                <Select.Item label="Blue" value="Blue" />
+                <Select.Item label="Black" value="Black" />
+                <Select.Item label="Pink" value="Pink" isDisabled={true} />
+                <Select.Item label="Green" value="Green" />
+              </Select.Content>
+            </Select.Portal>
+          </Select>
+          <FormControl.Helper>
+            <FormControl.Helper.Text>
+              You can only select one option
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+          <FormControl.Error>
+            <FormControl.Error.Icon>
+              <Icon
+                as={WarningIcon}
+                sx={{ color: '$red500', height: '$3', width: '$3' }}
+              />
+            </FormControl.Error.Icon>
+            <FormControl.Error.Text>Mandatory field</FormControl.Error.Text>
+          </FormControl.Error>
+        </FormControl>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        Select,
+        Icon,
+        ChevronDownIcon,
+        FormControl,
+        WarningIcon,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
