--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -604,7 +604,7 @@ The Select component with FormControl example demonstrates how to manage its sta
     showArgsController={false}
     metaData={{
       code: `
-        <FormControl isRequired>
+        <FormControl isRequired isInvalid>
           <FormControl.Label>
             <FormControl.Label.Text>
               Choose your favorite color
@@ -640,7 +640,6 @@ The Select component with FormControl example demonstrates how to manage its sta
             <FormControl.Error.Icon>
               <Icon
                 as={WarningIcon}
-                sx={{ color: '$red500', height: '$3', width: '$3' }}
               />
             </FormControl.Error.Icon>
             <FormControl.Error.Text>Mandatory field</FormControl.Error.Text>
