feat: added description of avatar group

--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -125,6 +125,8 @@ The Examples section provides visual representations of the different variants o
 
 #### Avatar Group
 
+The avatar group allows users to group avatars and display them in a horizontal or vertical row for better visual representation and functionality.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
