feat: updated examples

--- a/example/storybook/src/components/DataDisplay/Divider/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Divider/index.stories.mdx
@@ -89,6 +89,8 @@ The Examples section provides visual representations of the different variants o
 
 #### Variants
 
+Divider allows to divide the layout in horizontal and vertical form.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
@@ -114,6 +116,7 @@ The Examples section provides visual representations of the different variants o
               mx: 10,
               bg: '$emerald500',
               h: 30,
+              w: 1,
               _dark: {
                 bg: '$emerald400',
               },
@@ -125,6 +128,7 @@ The Examples section provides visual representations of the different variants o
               mx: 10,
               bg: '$indigo500',
               h: 30,
+              w: 1,
               _dark: {
                 bg: '$indigo400',
               },
