--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -99,6 +99,8 @@ The Examples section provides visual representations of the different variants o
 
 #### Box with ref
 
+The below example show a Box with React ref.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
