--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -143,7 +143,7 @@ The avatar group allows users to group avatars and display them in a horizontal 
       <Avatar.FallbackText>AB</Avatar.FallbackText>
       <Avatar.Image
         source={{
-          uri: 'https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
+          uri: 'https://images.unsplashGVufDB8fHx8&auto=format&fit=crop&w=687&q=80',
         }}
       />
       <Avatar.Badge />
