--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -53,11 +53,11 @@ npx gluestack-ui@latest add icon
     metaData={{
       code: `
       <VStack space="md" alignItems='center'>
-    <Icon as={Camera} />
-    <Icon as={Camera} color="$primary500" />
-    <Icon as={Camera} size="xl" />
-    <Icon as={Camera} sx={{ h: 40, w: 40, color: 'red' }} />
-</VStack>
+        <Icon as={Camera} />
+        <Icon as={Camera} color="$primary500" />
+        <Icon as={Camera} size="xl" />
+        <Icon as={Camera} sx={{ h: 40, w: 40, color: 'red' }} />
+    </VStack>
 `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -74,25 +74,6 @@ npx gluestack-ui@latest add icon
     }}
   />
 </AppProvider>
-
-```jsx
-import React from 'react';
-import { Icon } from './components';
-import { Cake } from 'lucide-react-native';
-
-export const IconExample = ({ ...props }: any) => {
-  return (
-    <Wrapper>
-      <VStack space="lg">
-        <Icon as={Camera} />
-        <Icon as={Camera} color="$primary500" />
-        <Icon as={Camera} size="xl" />
-        <Icon as={Camera} sx={{ h: 40, w: 40, color: 'red', bg: '$blue100' }} />
-      </VStack>
-    </Wrapper>
-  );
-};
-```
 
 #### SVG & Custom Icons
 
@@ -143,30 +124,6 @@ CreateIcon function takes StyledIcon, viewBox, d, path as parameters. We can tak
   />
 </AppProvider>
 
-```jsx
-import { HamburgerIcon } from '@gluestack-ui/icon';
-import { styled, AsForwarder } from '@dank-style/react';
-import React from 'react';
-import { Icon } from './components';
-
-// Use the imported Icon by passing it in as prop
-export const IconExample = ({ ...props }: any) => {
-  return (
-    <Wrapper>
-      <VStack space="lg">
-        <Icon as={HamburgerIcon} {...props} />
-        <Icon
-          as={HamburgerIcon}
-          sx={{ h: 40, w: 40, color: 'red', bg: '$blue100' }}
-        />
-        <Icon as={HamburgerIcon} size="xl" />
-        <Icon as={HamburgerIcon} color="$primary500" />
-      </VStack>
-    </Wrapper>
-  );
-};
-```
-
 Gluestack-ui provides a set of pre created icons that can be used directly in our app and we can also integrate third party icons using [AsForwarder]("https://dank.style/docs/api/as-forwarder") form [dank-style]("https://dank.style/")
 
 ### Anatomy
@@ -216,35 +173,35 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-<HStack w="70%" space="lg"  flexWrap= 'wrap'>
-  <Icon as={AddIcon}  />
-  <Icon as={HamburgerIcon}  />
-  <Icon as={ArrowBackIcon}  />
-  <Icon as={ArrowDownIcon}  />
-  <Icon as={ArrowForwardIcon}  />
-  <Icon as={ArrowUpIcon}  />
-  <Icon as={ChevronDownIcon}  />
-  <Icon as={ChevronUpIcon}  />
-  <Icon as={ChevronLeftIcon}  />
-  <Icon as={ChevronRightIcon}  />
-  <Icon as={CheckIcon}  />
-  <Icon as={CircleIcon}  />
-  <Icon as={CloseIcon}  />
-  <Icon as={InfoIcon}  />
-  <Icon as={WeatherMoon} />
-  <Icon as={MinusIcon}  />
-  <Icon as={MoonIcon}  />
-  <Icon as={QuestionIcon}  />
-  <Icon as={SearchIcon}  />
-  <Icon as={SunIcon}  />
-  <Icon as={WarningIcon}  />
-  <Icon as={WarningOutlineIcon}  />
-  <Icon as={ThreeDotsIcon}  />
-  <Icon as={PlayIcon}  />
-  <Icon as={ShareIcon}  />
-  <Icon as={FavouriteIcon}  />
-  <Icon as={DeleteIcon} />
-  <Icon as={CloseIconFilled}  />
+<HStack w="70%" flexWrap= 'wrap'>
+  <Icon as={AddIcon} m="$2" />
+  <Icon as={HamburgerIcon} m="$2" />
+  <Icon as={ArrowBackIcon} m="$2" />
+  <Icon as={ArrowDownIcon} m="$2" />
+  <Icon as={ArrowForwardIcon} m="$2" />
+  <Icon as={ArrowUpIcon} m="$2" />
+  <Icon as={ChevronDownIcon} m="$2" />
+  <Icon as={ChevronUpIcon} m="$2" />
+  <Icon as={ChevronLeftIcon} m="$2" />
+  <Icon as={ChevronRightIcon} m="$2" />
+  <Icon as={CheckIcon} m="$2" />
+  <Icon as={CircleIcon} m="$2" />
+  <Icon as={CloseIcon} m="$2" />
+  <Icon as={InfoIcon} m="$2" />
+  <Icon as={WeatherMoon}m="$2" />
+  <Icon as={MinusIcon} m="$2" />
+  <Icon as={MoonIcon} m="$2" />
+  <Icon as={QuestionIcon} m="$2" />
+  <Icon as={SearchIcon} m="$2" />
+  <Icon as={SunIcon} m="$2" />
+  <Icon as={WarningIcon} m="$2" />
+  <Icon as={WarningOutlineIcon} m="$2" />
+  <Icon as={ThreeDotsIcon} m="$2" />
+  <Icon as={PlayIcon} m="$2" />
+  <Icon as={ShareIcon} m="$2" />
+  <Icon as={FavouriteIcon} m="$2" />
+  <Icon as={DeleteIcon}m="$2" />
+  <Icon as={CloseIconFilled} m="$2" />
 </HStack>
 `,
       transformCode: (code) => {
