--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -485,6 +485,7 @@ The following are the lists of all the libraries and packages the component reli
 - `react-native-svg`
 - `@gluestack-ui/hooks`
 - `@gluestack-ui/react-native-aria`
+- `@gluestack-ui/form-control
 
 ## Advanced
 
