--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -38,9 +38,9 @@ Following is the default implementation of the **Popover** component without any
     showArgsController={false}
     metaData={{
       code: `
-      <Box h={300}> 
+      <Box h={400}> 
 <Popover
-  placement={'bottom'}
+  placement="bottom"
   trigger={(triggerProps) => {
     return (
       <Pressable
