--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -14,7 +14,7 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Overlay/Popover" />
 
-import { Popover, Pressable, Text as PopoverText } from './Popover';
+import { Popover, Text as PopoverText } from './Popover';
 import { Button, Box, CloseIcon } from './Popover';
 import { transformedCode } from '../../../utils';
 import {
@@ -43,16 +43,13 @@ Following is the default implementation of the **Popover** component without any
   placement="bottom"
   trigger={(triggerProps) => {
     return (
-      <Pressable
-        bgColor={'$red500'}
-        borderRadius={'$md'}
-        mt='$12'
+      <Button
         {...triggerProps}
       >
-        <Text color={'white'} padding="$3">
+        <Button.Text>
           Popover
-        </Text>
-      </Pressable>
+        </Button.Text>
+      </Button>
     );
   }}
 >
@@ -88,7 +85,6 @@ Following is the default implementation of the **Popover** component without any
         Wrapper,
         Text: PopoverText,
         Popover,
-        Pressable,
         Button,
         CloseIcon,
         Box,
