feat: divider example fixed

--- a/example/storybook/src/components/DataDisplay/Divider/index.stories.mdx
+++ b/example/storybook/src/components/DataDisplay/Divider/index.stories.mdx
@@ -110,13 +110,11 @@ Divider allows to divide the layout in horizontal and vertical form.
         >
           <Text>Simple</Text>
           <Divider
-            variant="vertical"
-            // orientation="vertical"
+            orientation="vertical"
             sx={{
               mx: 10,
               bg: '$emerald500',
               h: 30,
-              w: 1,
               _dark: {
                 bg: '$emerald400',
               },
@@ -128,12 +126,11 @@ Divider allows to divide the layout in horizontal and vertical form.
               mx: 10,
               bg: '$indigo500',
               h: 30,
-              w: 1,
               _dark: {
                 bg: '$indigo400',
               },
             }}
-            variant="vertical"
+            orientation="vertical"
           />
           <Text>Beautiful</Text>
         </HStack>
@@ -149,7 +146,6 @@ Divider allows to divide the layout in horizontal and vertical form.
             variant="horizontal"
             sx={{
               bg: '$red500',
-              h: 1,
               _dark: {
                 bg: '$red400',
               },
