--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -53,6 +53,7 @@ Following is the default implementation of the **Popover** component without any
     );
   }}
 >
+  <Popover.Backdrop />
   <Popover.Content>
     <Popover.Header>
       <Text>Delete Customer</Text>
