added description for alert variant

--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -110,6 +110,8 @@ The Examples section provides visual representations of the different variants o
 
 #### Alert Variants
 
+Alert allows you to show the type of variant such as `info`, `success`, `error`, `warning`, and `muted`.
+
 <AppProvider>
   <CodePreview
     showComponentRenderer={true}
